--- a/index.html
+++ b/index.html
@@ -2,8 +2,72 @@
 <html>
   <head>
     <title>Mapa Interativo</title>
+    <style>
+      /* Define a paleta de cores */
+      :root {
+        --cor-principal: #00cf8e;
+        --cor-secundaria: #3ad7a4;
+        --cor-fundo: #fcfcfc;
+        --cor-texto: #333;
+      }
+
+      /* Define o estilo do menu lateral */
+      .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 200px;
+        background-color: var(--cor-secundaria);
+        color: var(--cor-fundo);
+        padding: 20px;
+        font-size: 18px;
+      }
+
+      /* Define o estilo do cabeçalho */
+      .cabecalho {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 200px;
+        height: 80px;
+        background-color: var(--cor-principal);
+        color: var(--cor-fundo);
+        padding: 20px;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      /* Define o estilo do conteúdo */
+      .conteudo {
+        margin-top: 80px;
+        padding: 20px;
+        font-size: 16px;
+        color: var(--cor-texto);
+      }
+    </style>
   </head>
   <body>
-    <iframe src="mapa.html" width="800" height="600"></iframe>
+    <!-- Menu lateral -->
+    <div class="menu">
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+    </div>
+
+    <!-- Cabeçalho -->
+    <div class="cabecalho">
+      <div>Agriscan</div>
+      <div>Outro elemento aqui</div>
+    </div>
+
+    <!-- Conteúdo -->
+    <div class="conteudo">
+      <iframe src="mapa.html" width="800" height="600"></iframe>
+    </div>
   </body>
 </html>
