--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- Conteúdo -->
     <div class="conteudo">
-      <iframe src="mapa.html" width="800" height="600"></iframe>
+      <iframe src="mapa.html?versao=1" width="800" height="600"></iframe>
     </div>
   </body>
 </html>
