--- a/index.html
+++ b/index.html
@@ -1,73 +1,117 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mapa Interativo</title>
-    <style>
-      /* Define a paleta de cores */
-      :root {
-        --cor-principal: #00cf8e;
-        --cor-secundaria: #3ad7a4;
-        --cor-fundo: #fcfcfc;
-        --cor-texto: #333;
-      }
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Agriscan</title>
+	<style>
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 16px;
+			color: #333;
+			background-color: #fcfcfc;
+			margin: 0;
+			padding: 0;
+		}
 
-      /* Define o estilo do menu lateral */
-      .menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 200px;
-        background-color: var(--cor-secundaria);
-        color: var(--cor-fundo);
-        padding: 20px;
-        font-size: 18px;
-      }
+		header {
+			background-color: #00cf8e;
+			padding: 20px;
+			color: #fcfcfc;
+			text-align: center;
+			font-size: 36px;
+			font-weight: bold;
+			text-transform: uppercase;
+		}
 
-      /* Define o estilo do cabeçalho */
-      .cabecalho {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 200px;
-        height: 80px;
-        background-color: var(--cor-principal);
-        color: var(--cor-fundo);
-        padding: 20px;
-        font-size: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
+		nav {
+			background-color: #3ad7a4;
+			padding: 10px;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			align-items: center;
+			position: fixed;
+			width: 100%;
+			top: 0;
+			z-index: 1;
+		}
 
-      /* Define o estilo do conteúdo */
-      .conteudo {
-        margin-top: 80px;
-        padding: 20px;
-        font-size: 16px;
-        color: var(--cor-texto);
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Menu lateral -->
-    <div class="menu">
-      <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-      </ul>
-    </div>
+		nav a {
+			color: #fcfcfc;
+			text-decoration: none;
+			font-size: 20px;
+			margin: 0 10px;
+			text-transform: uppercase;
+		}
 
-    <!-- Cabeçalho -->
-    <div class="cabecalho">
-      <div>Agriscan</div>
-      <div>Outro elemento aqui</div>
-    </div>
+		section {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: flex-start;
+			padding: 20px;
+			margin-top: 80px;
+		}
 
-    <!-- Conteúdo -->
-    <div class="conteudo">
-      <iframe src="mapa.html?versao=1" width="800" height="600"></iframe>
-    </div>
-  </body>
+		aside {
+			flex: 1;
+			min-width: 200px;
+			margin-right: 20px;
+		}
+
+		iframe {
+			flex: 3;
+			height: 100%;
+			border: none;
+		}
+
+		@media only screen and (max-width: 768px) {
+			header {
+				font-size: 24px;
+			}
+
+			nav {
+				flex-direction: column;
+				align-items: flex-start;
+			}
+
+			nav a {
+				margin: 10px 0;
+			}
+
+			section {
+				margin-top: 120px;
+			}
+
+			aside {
+				flex: 0 0 100%;
+				margin: 0 0 20px 0;
+			}
+
+			iframe {
+				flex: 0 0 100%;
+				height: 400px;
+			}
+		}
+	</style>
+</head>
+<body>
+	<header>Agriscan</header>
+	<nav>
+		<a href="#">Home</a>
+		<a href="#">Sobre</a>
+		<a href="#">Contato</a>
+	</nav>
+	<section>
+		<aside>
+			<h2>Opções</h2>
+			<ul>
+				<li><a href="#">Opção 1</a></li>
+				<li><a href="#">Opção 2</a></li>
+				<li><a href="#">Opção 3</a></li>
+			</ul>
+		</aside>
+		<iframe src="mapa.html?versao=2"></iframe>
+	</section>
+</body>
 </html>
