--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<li><a href="#">Opção 3</a></li>
 			</ul>
 		</aside>
-		<iframe src="mapa.html?versao=2"></iframe>
+		<iframe src="mapa.html"></iframe>
 	</section>
 </body>
 </html>
