--- a/index.html
+++ b/index.html
@@ -4,96 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Agriscan</title>
-	<style>
-		body {
-			font-family: Arial, Helvetica, sans-serif;
-			font-size: 16px;
-			color: #333;
-			background-color: #fcfcfc;
-			margin: 0;
-			padding: 0;
-		}
-
-		header {
-			background-color: #00cf8e;
-			padding: 20px;
-			color: #fcfcfc;
-			text-align: center;
-			font-size: 36px;
-			font-weight: bold;
-			text-transform: uppercase;
-		}
-
-		nav {
-			background-color: #3ad7a4;
-			padding: 10px;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-between;
-			align-items: center;
-			position: fixed;
-			width: 100%;
-			top: 0;
-			z-index: 1;
-		}
-
-		nav a {
-			color: #fcfcfc;
-			text-decoration: none;
-			font-size: 20px;
-			margin: 0 10px;
-			text-transform: uppercase;
-		}
-
-		section {
-			display: flex;
-			flex-wrap: wrap;
-			align-items: flex-start;
-			padding: 20px;
-			margin-top: 80px;
-		}
-
-		aside {
-			flex: 1;
-			min-width: 200px;
-			margin-right: 20px;
-		}
-
-		iframe {
-			flex: 3;
-			height: 100%;
-			border: none;
-		}
-
-		@media only screen and (max-width: 768px) {
-			header {
-				font-size: 24px;
-			}
-
-			nav {
-				flex-direction: column;
-				align-items: flex-start;
-			}
-
-			nav a {
-				margin: 10px 0;
-			}
-
-			section {
-				margin-top: 120px;
-			}
-
-			aside {
-				flex: 0 0 100%;
-				margin: 0 0 20px 0;
-			}
-
-			iframe {
-				flex: 0 0 100%;
-				height: 400px;
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 	<header>Agriscan</header>
@@ -113,5 +24,6 @@
 		</aside>
 		<iframe src="mapa.html"></iframe>
 	</section>
+	<script src="styles/script.js"></script>
 </body>
 </html>
