--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Agriscan</title>
-	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>Agriscan</header>
@@ -24,6 +24,6 @@
 		</aside>
 		<iframe src="mapa.html?versao=3"></iframe>
 	</section>
-	<script src="styles/script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
