--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<li><a href="#">Opção 3</a></li>
 			</ul>
 		</aside>
-		<iframe src="mapa.html?versao=3"></iframe>
+		<iframe src="mapa.html"></iframe>
 	</section>
-	<script src="script.js"></script>
+	<script src="scripts.js"></script>
 </body>
 </html>
