--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="#">Opção 3</a></li>
 			</ul>
 		</aside>
-		<iframe src="mapa.html"></iframe>
+		<iframe src="mapa.html?version=1"></iframe>
 	</section>
 	<script src="scripts.js"></script>
 </body>
