--- a/index.html
+++ b/index.html
@@ -156,4 +156,6 @@
 	</footer>
 
 	<!-- Stripe JS -->
-	<script src="https://js.stripe.com/v3/"></script
+<!-- Stripe JS -->
+<script src="https://js.stripe.com/v3/"></script>
+
