--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Agriscan - Seu mapa interativo</title>
+	<title>Agriscan v2- Seu mapa interativo</title>
 
 	<!-- Stripe CSS -->
 	<link rel="stylesheet" href="https://unpkg.com/@stripe/stripe-js@1.18.0/themes/alpha-default.min.css">
