--- a/index.html
+++ b/index.html
@@ -3,159 +3,153 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Agriscan v2- Seu mapa interativo</title>
-
-	<!-- Stripe CSS -->
-	<link rel="stylesheet" href="https://unpkg.com/@stripe/stripe-js@1.18.0/themes/alpha-default.min.css">
-
-	<!-- Leaflet CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css"/>
-
-	<!-- Custom CSS -->
-	<link rel="stylesheet" href="style.css">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Agriscan</title>
+	<link rel="stylesheet" href="styles/reset.css">
+	<link rel="stylesheet" href="styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#">Agriscan</a>
-	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
-	    <div class="collapse navbar-collapse" id="navbarNav">
-	      <ul class="navbar-nav">
-	        <li class="nav-item">
-	          <a class="nav-link active" aria-current="page" href="#">Home</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" href="#">Sobre</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" href="#">Contato</a>
-	        </li>
-	      </ul>
-	    </div>
-	  </div>
-	</nav>
+	<header class="header">
+		<div class="container">
+			<a href="#" class="logo">
+				<img src="images/logo.svg" alt="Agriscan">
+			</a>
+			<nav class="main-nav">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
+			<div class="menu-toggle">
+				<div class="hamburger"></div>
+			</div>
+		</div>
+	</header>
 
-<!-- Hero Section -->
-  <section class="hero">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1 class="hero-title">Seu Mapa Interativo</h1>
-          <p class="hero-subtitle">Com o Agriscan, você pode visualizar e analisar os dados da sua propriedade em um mapa interativo.</p>
-          <a href="#" class="btn btn-primary">Saiba Mais</a>
-        </div>
-        <div class="col-md-6">
-          <iframe src="mapa.html" width="100%" height="400" frameborder="0"></iframe>
+	<section class="hero">
+		<div class="container">
+			<h1 class="title">Creative &amp; Effective</h1>
+			<p class="subtitle">We help businesses grow and succeed online.</p>
+			<a href="#" class="btn btn-primary">Get Started</a>
+		</div>
+	</section>
+
+	<section class="services">
+		<div class="container">
+			<h2 class="section-title">Agriscan é uma empresa especializada no uso de tecnologia de ponta para melhorar a eficiência e a sustentabilidade da agricultura. Nossos serviços incluem:</h2>
+			<p class="section-subtitle">We offer a variety of services to help your business thrive online.</p>
+			<div class="services-grid">
+				<div class="service">
+					<img src="images/web-design-icon.svg" alt="Web Design Icon" class="service-icon">
+					<h3 class="service-title">Web Design</h3>
+					<p class="service-description">We create beautiful, responsive websites that will help your business stand out online.</p>
+				</div>
+				<div class="service">
+					<img src="images/digital-marketing-icon.svg" alt="Digital Marketing Icon" class="service-icon">
+					<h3 class="service-title">Digital Marketing</h3>
+					<p class="service-description">Our digital marketing strategies will help you reach more customers and increase your online visibility.</p>
+				</div>
+				<div class="service">
+					<img src="images/seo-icon.svg" alt="SEO Icon" class="service-icon">
+					<h3 class="service-title">SEO</h3>
+					<p class="service-description">We'll help you optimize your website and improve your search engine rankings.</p>
+				</div>
+			</div>
+		</div>
+    <section class="portfolio">
+      <div class="container">
+        <h2 class="section-title">Our Work</h2>
+        <p class="section-subtitle">Check out some of our latest projects.</p>
+        <div class="portfolio-grid">
+          <div class="portfolio-item">
+            <img src="images/portfolio-1.jpg" alt="Portfolio Item">
+            <div class="portfolio-item-overlay">
+              <h3 class="portfolio-item-title">Project Name</h3>
+              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+              <a href="#" class="btn btn-secondary">View Project</a>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <img src="images/portfolio-2.jpg" alt="Portfolio Item">
+            <div class="portfolio-item-overlay">
+              <h3 class="portfolio-item-title">Project Name</h3>
+              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+              <a href="#" class="btn btn-secondary">View Project</a>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <img src="images/portfolio-3.jpg" alt="Portfolio Item">
+            <div class="portfolio-item-overlay">
+              <h3 class="portfolio-item-title">Project Name</h3>
+              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+              <a href="#" class="btn btn-secondary">View Project</a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
+    <section class="about">
+      <div class="container">
+        <h2 class="section-title">About Us</h2>
+        <p class="section-subtitle">We are a team of experienced professionals dedicated to helping your business succeed online.</p>
+        <div class="about-grid">
+          <div class="about-item">
+            <img src="images/about-1.jpg" alt="About Item">
+            <h3 class="about-item-title">Who We Are</h3>
+            <p class="about-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          </div>
+          <div class="about-item">
+            <img src="images/about-2.jpg" alt="About Item">
+            <h3 class="about-item-title">What We Do</h3>
+            <p class="about-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          </div>
+          <div class="about-item">
+            <img src="images/about-3.jpg" alt="About Item">
+            <h3 class="about-item-title">Why Choose Us</h3>
+            <p class="about-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-	<!-- Features Section -->
-	<section class="features">
-		<div class="container">
-			<h2 class="section-title">Recursos do Agriscan</h2>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="feature">
-						<i class="bi bi-globe"></i>
-						<h3 class="feature-title">Mapas Interativos</h3>
-						<p class="feature-description">Visualize e analise os dados da sua propriedade em um mapa interativo.</p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature">
-						<i class="bi bi-pie-chart"></i>
-						<h3 class="feature-title">Análise de Dados</h3>
-						<p class="feature-description">Análise os dados da sua propriedade para tomar decisões mais informadas.</p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="feature">
-						<i class="bi bi-clock"></i>
-						<h3 class="feature-title">Economize Tempo</h3>
-						<p class="feature-description">Economize tempo ao visualizar e gerenciar seus dados em um só lugar.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <section class="cta">
+      <div class="container">
+        <h2 class="section-title">Ready to Get Started?</h2>
+        <p class="section-subtitle">Let's</p>
+        <a href="#" class="btn btn-primary">Contact Us</a>
+      </div>
+    </section>
 
-	<!-- Pricing Section -->
-	<section class="pricing">
-		<div class="container">
-			<h2 class="section-title">Preços do Agriscan</h2>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-header">
-							<h3 class="card-title">Plano Básico</h3>
-							<p class="card-subtitle">R$ 9,99 / mês</p>
-						</div>
-						<div class="card-body">
-							<ul>
-								<li>1 Mapa</li>
-								<li>10 Marcadores</li>
-								<li>Exportação de Dados</li>
-							</ul>
-							<a href="#" class="btn btn-primary">Comprar Agora</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-header">
-							<h3 class="card-title">Plano Pro</h3>
-							<p class="card-subtitle">R$ 19,99 / mês</p>
-						</div>
-						<div class="card-body">
-							<ul>
-								<li>5 Mapas</li>
-								<li>50 Marcadores</li>
-								<li>Exportação de Dados</li>
-								<li>Relatórios Personalizados</li>
-							</ul>
-							<a href="#" class="btn btn-primary">Comprar Agora</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<div class="card-header">
-							<h3 class="card-title">Plano Empresarial</h3>
-							<p class="card-subtitle">Entre em contato para preços</p>
-						</div>
-						<div class="card-body">
-							<ul>
-								<li>Mapas Ilimitados</li>
-								<li>Marcadores Ilimitados</li>
-								<li>Exportação de Dados</li>
-								<li>Relatórios Personalizados</li>
-								<li>Suporte Prioritário</li>
-							</ul>
-							<a href="#" class="btn btn-primary">Contate-nos</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    <footer class="footer">
+      <div class="container">
+        <nav class="footer-nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p class="footer-text">&copy; 2023 Agriscan</p>
+      </div>
+    </footer>
 
-	<!-- Footer -->
-	<footer class="footer">
-		<div class="container">
-			<p class="footer-text">Copyright © 2022 |
-				<a href="#">Termos de Uso</a> |
-				<a href="#">Política de Privacidade</a>
-			</p>
-		</div>
-	</footer>
-
-	<!-- Stripe JS -->
-<!-- Stripe JS -->
-<script src="https://js.stripe.com/v3/"></script>
+    <script src="scripts/jquery-3.6.0.min.js"></script>
+    <script src="scripts/scripts.js"></script>
+  </body>
+  </html>
 
