--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
 			<p class="section-subtitle">We offer a variety of services to help your business thrive online.</p>
 			<div class="services-grid">
 				<div class="service">
-					<img src="images/web-design-icon.svg" alt="Web Design Icon" class="service-icon">
-					<h3 class="service-title">Web Design</h3>
-					<p class="service-description">We create beautiful, responsive websites that will help your business stand out online.</p>
-				</div>
-				<div class="service">
-					<img src="images/digital-marketing-icon.svg" alt="Digital Marketing Icon" class="service-icon">
-					<h3 class="service-title">Digital Marketing</h3>
-					<p class="service-description">Our digital marketing strategies will help you reach more customers and increase your online visibility.</p>
-				</div>
+					<div class="service">
+            <img src="images/agriculture-precision.jpg" alt="Agricultura de Precisão" class="service-icon">
+            <h3 class="service-title">Agricultura de Precisão</h3>
+            <p class="service-description">Utilizamos sensores, drones e sistemas de GPS para coletar e analisar dados em tempo real, ajudando a melhorar o uso de recursos e a tomar decisões informadas.</p>
+          </div>
+          <div class="service">
+            <img src="images/pest-monitoring.jpg" alt="Monitoramento de Pragas e Doenças" class="service-icon">
+            <h3 class="service-title">Monitoramento de Pragas e Doenças</h3>
+            <p class="service-description">Utilizamos imagens de satélite e análise de dados para detectar e prevenir pragas e doenças, ajudando a proteger as plantações e a reduzir o uso de pesticidas.</p>
+          </div>
 				<div class="service">
 					<img src="images/seo-icon.svg" alt="SEO Icon" class="service-icon">
 					<h3 class="service-title">SEO</h3>
