--- a/index.html
+++ b/index.html
@@ -40,28 +40,29 @@
 	</section>
 
 	<section class="services">
-		<div class="container">
-			<h2 class="section-title">Agriscan é uma empresa especializada no uso de tecnologia de ponta para melhorar a eficiência e a sustentabilidade da agricultura. Nossos serviços incluem:</h2>
-			<p class="section-subtitle">We offer a variety of services to help your business thrive online.</p>
-			<div class="services-grid">
-				<div class="service">
-					<div class="service">
-            <img src="images/agriculture-precision.jpg" alt="Agricultura de Precisão" class="service-icon">
-            <h3 class="service-title">Agricultura de Precisão</h3>
-            <p class="service-description">Utilizamos sensores, drones e sistemas de GPS para coletar e analisar dados em tempo real, ajudando a melhorar o uso de recursos e a tomar decisões informadas.</p>
-          </div>
-          <div class="service">
-            <img src="images/pest-monitoring.jpg" alt="Monitoramento de Pragas e Doenças" class="service-icon">
-            <h3 class="service-title">Monitoramento de Pragas e Doenças</h3>
-            <p class="service-description">Utilizamos imagens de satélite e análise de dados para detectar e prevenir pragas e doenças, ajudando a proteger as plantações e a reduzir o uso de pesticidas.</p>
-          </div>
-				<div class="service">
-					<img src="images/seo-icon.svg" alt="SEO Icon" class="service-icon">
-					<h3 class="service-title">SEO</h3>
-					<p class="service-description">We'll help you optimize your website and improve your search engine rankings.</p>
-				</div>
-			</div>
-		</div>
+    <div class="container">
+      <h2 class="section-title">Agriscan é uma empresa especializada no uso de tecnologia de ponta para melhorar a eficiência e a sustentabilidade da agricultura. Nossos serviços incluem:</h2>
+      <p class="section-subtitle">We offer a variety of services to help your business thrive online.</p>
+      <div class="services-grid">
+        <div class="service">
+          <img src="images/agriculture-precision.jpg" alt="Agricultura de Precisão" class="service-icon">
+          <h3 class="service-title">Agricultura de Precisão</h3>
+          <p class="service-description">Utilizamos sensores, drones e sistemas de GPS para coletar e analisar dados em tempo real, ajudando a melhorar o uso de recursos e a tomar decisões informadas.</p>
+        </div>
+        <div class="service">
+          <img src="images/pest-monitoring.jpg" alt="Monitoramento de Pragas e Doenças" class="service-icon">
+          <h3 class="service-title">Monitoramento de Pragas e Doenças</h3>
+          <p class="service-description">Utilizamos imagens de satélite e análise de dados para detectar e prevenir pragas e doenças, ajudando a proteger as plantações e a reduzir o uso de pesticidas.</p>
+        </div>
+        <div class="service">
+          <img src="images/seo-icon.svg" alt="SEO Icon" class="service-icon">
+          <h3 class="service-title">SEO</h3>
+          <p class="service-description">We'll help you optimize your website and improve your search engine rankings.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
     <section class="portfolio">
       <div class="container">
         <h2 class="section-title">Our Work</h2>
