--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
 			<a href="#" class="btn btn-primary">Get Started</a>
 		</div>
 	</section>
-  <section id="map">
-    <h2>Localização</h2>
-    <div class="map-container">
-      <iframe src="mapa.html" frameborder="0"></iframe>
-    </div>
+  <section class="mapa-section">
+    <h2>Mapa do Agricultor</h2>
+    <iframe id="map-iframe" src="mapa.html" frameborder="0" allowfullscreen></iframe>
   </section>
+
 
 	<section class="services">
     <div class="container">
@@ -76,37 +75,38 @@
     </div>
   </section>
 <!-- Seção do Portfólio -->
-    <section class="portfolio">
-      <div class="container">
-        <h2 data-aos="fade-down">Portfólio</h2>
-        <div class="portfolio-items">
-          <div class="portfolio-item" data-aos="fade-up">
-            <img src="images/portfolio-1.jpg" alt="Portfolio Item">
-            <div class="portfolio-item-overlay">
-              <h3 class="portfolio-item-title">Project Name</h3>
-              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
-              <a href="#" class="btn btn-secondary">View Project</a>
-              </div>
-          </div>
-          <div class="portfolio-item" data-aos="fade-up" data-aos-delay="100">
-            <img src="images/portfolio-2.jpg" alt="Portfolio Item">
-            <div class="portfolio-item-overlay">
-              <h3 class="portfolio-item-title">Project Name</h3>
-              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
-              <a href="#" class="btn btn-secondary">View Project</a>
-            </div>
-          </div>
-          <div class="portfolio-item" data-aos="fade-up" data-aos-delay="200">
-            <img src="images/portfolio-3.jpg" alt="Portfolio Item">
-            <div class="portfolio-item-overlay">
-              <h3 class="portfolio-item-title">Project Name</h3>
-              <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
-              <a href="#" class="btn btn-secondary">View Project</a>
-            </div>
-          </div>
+<section id="portfolio" class="section">
+  <div class="container">
+    <h2 data-aos="fade-down">Portfólio</h2>
+    <div class="portfolio-items" data-aos="fade-up">
+      <div class="portfolio-item">
+        <img src="images/portfolio-1.jpg" alt="Portfolio Item">
+        <div class="portfolio-item-overlay">
+          <h3 class="portfolio-item-title">Project Name</h3>
+          <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          <a href="#" class="btn btn-secondary">View Project</a>
         </div>
       </div>
-    </section>
+      <div class="portfolio-item">
+        <img src="images/portfolio-2.jpg" alt="Portfolio Item">
+        <div class="portfolio-item-overlay">
+          <h3 class="portfolio-item-title">Project Name</h3>
+          <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          <a href="#" class="btn btn-secondary">View Project</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="images/portfolio-3.jpg" alt="Portfolio Item">
+        <div class="portfolio-item-overlay">
+          <h3 class="portfolio-item-title">Project Name</h3>
+          <p class="portfolio-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada eros quis enim lobortis.</p>
+          <a href="#" class="btn btn-secondary">View Project</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Seção Sobre com animações -->
   <section class="about">
@@ -119,13 +119,22 @@
 
 
 
-    <section class="cta">
-      <div class="container">
-        <h2 class="section-title">Ready to Get Started?</h2>
-        <p class="section-subtitle">Let's</p>
-        <a href="#" class="btn btn-primary">Contact Us</a>
-      </div>
-    </section>
+  <section class="contact-section" id="contact">
+    <h2>Entre em contato</h2>
+    <form>
+      <label for="name">Nome</label>
+      <input type="text" id="name" name="name" placeholder="Seu nome" required>
+
+      <label for="email">E-mail</label>
+      <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
+
+      <label for="message">Mensagem</label>
+      <textarea id="message" name="message" placeholder="Sua mensagem" required></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
 
     <footer class="footer">
       <div class="container">
