--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#">Contacts</a></li>
 				</ul>
 			</nav>
 			<div class="menu-toggle">
