--- a/index.html
+++ b/index.html
@@ -242,8 +242,15 @@
         <div class="row about-how">
 
             <h1 class="intro-header" data-aos="fade-up">How The App Works?</h1>
-
+            <div style="display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;">
+            <iframe src="mapa.html" width="1100" height="400" style="border:none;"></iframe>
+            </div>
             <div class="about-how-content" data-aos="fade-up">
+
                 <div class="about-how-steps block-1-2 block-tab-full group">
 
                     <div class="bgrid step" data-item="1">
