--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             align-items: center;
             width: 100%;
             height: 100%;">
-            <iframe src="mapa.html" width="1100" height="400" style="border:none;"></iframe>
+            <iframe src="app/mapa.html" width="1100" height="400" style="border:none;"></iframe>
             </div>
             <div class="about-how-content" data-aos="fade-up">
 
